[project]
name = "ComfyUI-TuZi-Flux-Kontext"
description = "Flux.1 Kontext: A powerful API service supporting text-to-image and multi-image-to-image generation. The 'pro' model costs only about RMB 0.14 (US$0.02) per image."
version = "1.0.5"
license = { file = "LICENSE" }
dependencies = [
    "requests",
    "python-dotenv",
    "fal-client",
    "httpx",
    "httpcore"
]

[project.urls]
Repository = "https://github.com/LKbaba/ComfyUI-TuZi-Flux-Kontext"

[tool.comfy]
PublisherId = "nokugua"
DisplayName = "Flux.1 Kontext api in TuZi"
Icon = "https://raw.githubusercontent.com/LKbaba/ComfyUI-TuZi-Flux-Kontext/main/images/text-to-image-demo.png" 